@startuml Gateway Interfaces

component Worker {
}

interface SendMessageToGatewayActivity {
    + Map<String, String> invokeGateway(String userId, String workflowRunId, String gatewayUrl, Preferences preferences)
}

package "Communication Gateway" as communicationGateway {
    component gateway {

    }


    class HashHelper {
        + String messageHash(String workflowRunId, String messageContents)
    }


    class GatewayRequest {
        - String userId
        - String workflowRunId
        + Standard Getters and Setters()
    }

    class GatewayResponse {
        - String userId
        - String messageHash
        - String errorMessage
        + Standard Getters and Setters()
    }


    interface GatewayController <TUser, TContent extends Content>{
        + {static} ResponseEntity<GatewayResponse> sendCommunication(GatewayRequest gatewayRequest, GatewayProperties<TUser, TContent> gatewayProperties, CommunicationGatewayService<TUser, TContent> communicationGatewayService)
        + ResponseEntity<GatewayResponse> processGatewayRequest(GatewayRequest gatewayRequest)
    }

    class EmailGatewayController implements GatewayController {
        + ResponseEntity<GatewayResponse> processGatewayRequest(GatewayRequest gatewayRequest)
    }

    abstract class GatewayProperties <TUser, TContent extends Content> {
        - String userId
        - String workflowRunId
        - ContentDeliveryService<TUser, TContent> contentDeliveryService
        - UserContentService<TUser, TContent?> userContentService
        - CommunicationHistoryAccessProvider communicationHistoryAccessProvider
        + Standard Getters() & Setters() & SuperBuilder()
    }

    interface GatewayService <TUser, TContent>{
        + ResponseEntity<GatewayResponse> sendCommunication(GatewayProperties<TUser, TContent> gatewayProperties)
    }

    class CommunicationGatewayService<TUser, TContent extends Content> implements GatewayService {
        + ResponseEntity sendCommunication(GatewayProperties<TUser, TContent> gatewayProperties))
    }

    note right of CommunicationGatewayService
        GatewayProperties object can be created by a
        builder and passed to this method.
    end note

    CommunicationGatewayService --> HashHelper: uses
    EmailGatewayController --> CommunicationGatewayService: uses
    EmailGatewayController -> GatewayProperties: uses
    Worker --|> SendMessageToGatewayActivity
    SendMessageToGatewayActivity --> GatewayController: uses
    EmailGatewayController -d-> GatewayResponse: returns
}


@enduml
